--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ body.calc #loading {
 .ac-node-type,
 .ac-more {
   font-size: 0.8em;
+  padding: 0.25em;
 }
 
 #info {
@@ -111,6 +112,7 @@ body.calc #loading {
   left: 0;
   top: 3em;
   margin: 0.5em;
+  padding: 0.5em;
   background: #fff;
   border: 1px solid #ccc;
   box-shadow: inset 0 0 0 0.25em rgba(187, 219, 247, 0.9);
